jlatexmath (0.9.7)
	* \v accent was badly scaled in certain font files. 

        * Resizebox could lead to a box with NaN as dimensions !
	   
	* Add " for ''

	* Bug with \fg

	* Add a command \jlmXML which can replaces $foo by the value of foo
	  attribute.

	* Add the possibility to add a break in a line in using \-.

	* Bad type for FencedAtom.

	* Bad translation of &8821; (right guillemet) into LaTeX.

	* Issue with default color in TeXIcon.

	* Fix build problems.

	* Change FSF address in LICENSE files.

	* Add a check !=null in cache.

	* Bugs fix: Columns was not centered in matrix env and \cot was
          displayed as \cos.
	* Add an option in jlmDynamic ([i]) to give the possibility to insert
          a group as if it was not a group.

jlatexmath (0.9.6)
        * A TeXFormula.root must not be null in partial mode.
        * Provide a manifest for the fop plugin defining the dependency on the
          jlatexmath jar package

jlatexmath (0.9.5)
	* Remove the Java reflection use and reorganization in the fonts dir.

	* Delegate the font rendering to java.

        * add \jlmText,\jlmTextit,\jlmTextbf,\jlmTextitbf and \jlmExternalFont

        * \huge\huge bug definitly fixed

        * \huge\huge foo apply two times the huge factor

        * In \overbrace{a}, the brace were misplaced.

        * Add \(...\) & \[...\], $$...$$, \begin{math}...\end{math} and
          \begin{displaymath}...\end{displaymath}

        * No display with \left in partial mode

        * The fop plugin is now available with fop 0.95 and 1.0

        * \left(...\right) was inactive in \mathsf

 -- Calixte Denizet <calixte@contrib.scilab.org>

jlatexmath (0.9.4)

        * Update build.xml to add a base directory in zip archives.

        * Add \og and \fg.

        * In text mode, the normal dot must be a punctuation symbol.

        * Add \cal.

        * Add \it, \bf, \sc, ...

        * Add commands \textsc and \textcircled.
