@@ -1,4 +1,10 @@
 jlatexmath (0.9.7)
+	* Extend the way to code colors in \textcolor, \colorbox, \fcolorbox, 
+	  fgcolor and bgcolor.
+	  Now \textcolor{color} where color could be 255,0,0 (int RGB) or
+          1.0,0,0 (float RGB) or 1.0,0,0,0.5 (float CMYK) or 0.6 (Gray) or
+          #FF0000 (html RGB) or FF0000 (hexa RGB) are accepted.
+
 	* \v accent was badly scaled in certain font files. 
 
         * Resizebox could lead to a box with NaN as dimensions !
